src/app/exhibit/exhibit.component.scss
$light-blue: #23a5cb;
$dark-blue: #117cad;
$light-brown: #edba5e;
$crimson: #e9232d;

.header {
    margin-top: -4em;
    position: relative;
    img {
        width: 100%;
        min-height: 200px;
        filter: brightness(0.4);
    }
    .center {
        text-align: center;
        position: absolute;
        top: 55%;
        left: 50%;
        transform: translate(-50%, -50%);
        font-size: 3rem;
        color: white;
        border: 5px solid white;
        border-radius: 5px;
        padding: 10px;

        @media screen and (max-width: 904px) {
            font-size: 2em;
        }

        @media screen and (max-width: 614px) {
            font-size: 1em;
        }
    }
}

.exhibits {
    padding-top: 2em;
    padding-bottom: 2em;
    // background-color: $light-blue;

    .btn-link {
        color: $dark-blue;
    }
}

